--- a/main.css
+++ b/main.css
@@ -10,22 +10,36 @@ header nav {
 }
 main {
     margin: 0 auto;
-    width: 900px;
-    padding: 0 50px 0 50px;
+    width: 75%;
 }
-.gridlayout {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-}
+
 img {
     width: 100%;
     height: 100%;
 }
 .container {
-    margin: 0 100px 0 100px;
+    margin: 0 auto;
+    width: 60%;
 }
 .container > div {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.theory {
+    width:20%;
+    font-size: 12px;
+    padding:0 5% 18% 0;
+}
+
+#theory-container{
+    position: relative;
+}
+
+#text-labels {
+    display: flex;
+    flex-wrap: wrap;
+    position: absolute;
+    top:150px;
 }
