--- a/main.css
+++ b/main.css
@@ -1,136 +1,163 @@
-body{
-    margin:0;
-    width: 100%;
-    color: black;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+body {
+  margin: 0;
+  width: 100%;
+  color: black;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
-
+/* Header Styles*/
 header nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 20px;
+  border-bottom: 1px solid lightgrey;
 }
-main {
-    margin: 0 auto;
-    width: 75%;
+header i {
+  margin-right: 20px;
 }
 
-img {
-    width: 100%;
-    height: 100%;
+header a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
+
+header a:hover{
+    text-decoration: underline;
+}
+
+header button {
+    background-color: #6288A5;
+    padding: 10px;
+    color: white;
+    font-size: 12px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+}
+
+/*Main Page Styles*/
+main {
+  margin: 0 auto;
+  width: 75%;
+}
+
+main img {
+  width: 100%;
+  height: 100%;
 }
 .container {
-    margin: 0 auto;
-    width: 60%;
+  margin: 0 auto;
+  width: 60%;
 }
 .container > div {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .theory {
-    width:20%;
-    font-size: 12px;
-    padding:0 5% 18% 0;
+  width: 20%;
+  font-size: 12px;
+  padding: 0 5% 18% 0;
 }
 
-#theory-container{
-    position: relative;
+#theory-container {
+  position: relative;
 }
 
 #text-labels {
-    display: flex;
-    flex-wrap: wrap;
-    position: absolute;
-    top:150px;
+  display: flex;
+  flex-wrap: wrap;
+  position: absolute;
+  top: 150px;
 }
 
 figure {
-    margin: 0;
+  margin: 0;
 }
 aside {
-    position: absolute;
-    top: 1000px;
-    right: 0;
-    display: flex;
-    flex-direction: column;
+  position: absolute;
+  top: 1000px;
+  right: 0;
+  display: flex;
+  flex-direction: column;
 }
 .side {
-    width: 200px;
-    margin: 50px;
+  width: 200px;
+  margin: 50px;
 }
 .side1 {
-    margin-bottom: 300px;
+  margin-bottom: 300px;
 }
 .side2 img {
-    width: 70px;
-    height: 70px;
+  width: 70px;
+  height: 70px;
 }
 .side2 h4 {
-    border-bottom: 1px solid gray;
+  border-bottom: 1px solid gray;
 }
 
 footer {
-    width:90%;
-    margin:0 auto;
-    position: relative;
+  width: 90%;
+  margin: 0 auto;
+  position: relative;
 }
 #more-footer {
-    border-top: 1px solid gray;
-    width: 80%;
-    margin-top: 20px;
+  border-top: 1px solid gray;
+  width: 80%;
+  margin-top: 20px;
 }
 
 .thumbnail-grid {
-    width:60%;
-    float: left;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-column-gap:20px;
+  width: 60%;
+  float: left;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 20px;
 }
 
-.thumbnail{
-    width: 300px;
+.thumbnail {
+  width: 300px;
 }
 
 .thumbnail img {
-    width:300px;
-    height:200px;
+  width: 300px;
+  height: 200px;
 }
 #editor-pick {
-    clear: both;
-    border-top: 1px solid gray;
-    width: 80%;
-    margin-top: 20px;
+  clear: both;
+  border-top: 1px solid gray;
+  width: 80%;
+  margin-top: 20px;
 }
 aside {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 20%;
-    margin-left: 400px;
-    border-top: 1px solid gray;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 20%;
+  margin-left: 400px;
+  border-top: 1px solid gray;
 }
 .most {
-    border-top: 0.1px solid lightgray;
-    padding: 20px 0 20px 0;
-    list-style: none;
-    width: 100%;
+  border-top: 0.1px solid lightgray;
+  padding: 20px 0 20px 0;
+  list-style: none;
+  width: 100%;
 }
 aside > h3 {
-    text-align: center;
+  text-align: center;
 }
-a  {
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
 footer > nav {
-    clear: both;
+  clear: both;
 }
 .ul-container {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
-.ul-container>ul:last-child {
-border-left: 0.1px solid lightgray;
+.ul-container > ul:last-child {
+  border-left: 0.1px solid lightgray;
 }
