--- a/main.css
+++ b/main.css
@@ -42,28 +42,98 @@ main {
   width: 75%;
 }
 
+h1 {
+    text-align: center;
+    font-size: 32px;
+    text-align: left;
+    padding-left:15%;
+    font-style: italic;
+}
+
 main img {
   width: 100%;
   height: 100%;
+}
+
+figcaption, caption{
+    font-size: 15px;
+    color: grey;
 }
 .container {
   margin: 0 auto;
   width: 60%;
 }
+
+/*Start of Social icon styles........*/
 .container > div {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
+.social-icons a {
+    text-decoration: none;
+    color: black;
+    padding-right:5px;
+    font-size: 20px;
+}
+
+.social-icons a:hover {
+    color: grey;
+}
+
+.below-theory>.social-icons {
+  all: unset;
+  display: block;
+  text-align: right;
+}
+
+/*.........End of Social icon styles*/
+.container>h4>a{
+    color: black;
+    text-decoration: underline;
+}
+
+.container>h4>a:hover{
+    text-decoration: none;
+}
+
+/*Container Paragraphs styles*/
+.container p {
+    font-size: 20px;
+    line-height: 30px;
+}
+
+.container p>a {
+  color:#6288A5;
+  text-decoration: underline;
+}
+
+.container p>a:hover{
+  text-decoration: none;
+}
+.container blockquote{
+    font-size: 20px;
+    font-weight: bold;
+    margin: 0;
+    text-align: left;
+}
+/* Theory image-text grid styles*/
 .theory {
   width: 20%;
-  font-size: 12px;
-  padding: 0 5% 18% 0;
+  font-size: 14px;
+  padding: 0 5% 15% 0;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 #theory-container {
   position: relative;
+}
+
+#theory-container hr{
+    width: 50px;
+    color:black;
+    margin-left: 0;
 }
 
 #text-labels {
@@ -76,6 +146,18 @@ main img {
 figure {
   margin: 0;
 }
+
+.below-theory > small {
+  color: grey;
+}
+.below-theory > small a {
+  color:inherit;
+}
+.below-theory > small a:hover {
+  text-decoration: underline;
+}
+
+/*Side bar styles*/
 aside {
   position: absolute;
   top: 1000px;
