--- a/main.css
+++ b/main.css
@@ -158,16 +158,20 @@ figure {
 }
 
 /*Side bar styles*/
-aside {
-  position: absolute;
-  top: 1000px;
-  right: 0;
+.main-aside {
+    position: absolute;
+    right: 0;
+    top: 1000px;
+    width: 30%;
+    margin-left: 400px;
   display: flex;
   flex-direction: column;
+  
 }
 .side {
-  width: 200px;
+  width: 300px;
   margin: 50px;
+  display: block;
 }
 .side1 {
   margin-bottom: 300px;
@@ -175,12 +179,34 @@ aside {
 .side2 img {
   width: 70px;
   height: 70px;
+  margin-right: 10px;
+}
+
+.main-aside figure {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.main-aside figure:nth-last-child(1){
+    background-color: lightgray;
+    font-size: 10px;
+    padding: 5px;
 }
 .side2 h4 {
   border-bottom: 1px solid gray;
 }
 
+.side2 a {
+    text-decoration: none;
+    color: black;
+}
+.side2 a:hover {
+    text-decoration: underline;
+}
+
 footer {
+  clear: both;
   width: 90%;
   margin: 0 auto;
   position: relative;
@@ -213,7 +239,7 @@ footer {
   width: 80%;
   margin-top: 20px;
 }
-aside {
+footer aside {
   position: absolute;
   top: 0;
   right: 0;
@@ -227,7 +253,7 @@ aside {
   list-style: none;
   width: 100%;
 }
-aside > h3 {
+footer aside > h3 {
   text-align: center;
 }
 a {
