--- a/main.css
+++ b/main.css
@@ -4,14 +4,22 @@ body {
   color: black;
   font-family: Georgia, "Times New Roman", Times, serif;
 }
-/* Header Styles*/
+
+/* Header Styles */
 header nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 5px 20px;
   border-bottom: 1px solid lightgrey;
+  position: fixed;
+  width: 98%;
+  top: 0;
+  background-color: white;
+  padding-right: 100px;
+  z-index: 1000;
 }
+
 header i {
   margin-right: 20px;
 }
@@ -22,7 +30,47 @@ header a {
   font-weight: bold;
 }
 
-header a:hover {
+footer h3 > a,
+.ul-container a,
+.side2 a {
+  text-decoration: none;
+  color: black;
+}
+
+.social-icons a {
+  text-decoration: none;
+  color: black;
+  padding-right: 5px;
+  font-size: 20px;
+}
+
+.most a {
+  color: black;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.container > h4 > a {
+  color: black;
+}
+
+.container p > a {
+  color: #6288a5;
+}
+
+.container > h4 > a,
+.container p > a,
+header a:hover,
+footer h3 > a:hover {
+  text-decoration: underline;
+}
+
+footer > nav:last-child > ul a {
+  text-decoration: none;
+  color: gray;
+}
+
+.side2 a:hover {
   text-decoration: underline;
 }
 
@@ -35,16 +83,8 @@ header button {
   border: none;
   border-radius: 5px;
 }
-header nav {
-  position: fixed;
-  width: 98%;
-  top: 0;
-  background-color: white;
-  padding-right: 100px;
-  z-index: 1000;
-}
 
-/*Main Page Styles*/
+/* Main Page Styles */
 main {
   padding-top: 30px;
   margin: 0 auto;
@@ -52,7 +92,6 @@ main {
 }
 
 h1 {
-  text-align: center;
   font-size: 32px;
   text-align: left;
   padding-left: 15%;
@@ -65,30 +104,25 @@ main img {
 }
 
 figcaption,
-caption {
+#video-caption {
   font-size: 15px;
   color: grey;
 }
+
 .container {
   margin: 0 auto;
   width: 60%;
 }
 
-/*Start of Social icon styles........*/
+/* Start of Social icon styles........ */
 .container > div {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.social-icons a {
-  text-decoration: none;
-  color: black;
-  padding-right: 5px;
-  font-size: 20px;
-}
-
-.social-icons a:hover {
+.social-icons a:hover,
+.most a:hover {
   color: grey;
 }
 
@@ -98,9 +132,7 @@ caption {
   text-align: right;
 }
 
-/*.........End of Social icon styles*/
-.container > h4 > a {
-  color: black;
+.ul-container a:hover {
   text-decoration: underline;
 }
 
@@ -108,27 +140,24 @@ caption {
   text-decoration: none;
 }
 
-/*Container Paragraphs styles*/
+/* Container Paragraphs styles */
 .container p {
   font-size: 20px;
   line-height: 30px;
 }
 
-.container p > a {
-  color: #6288a5;
-  text-decoration: underline;
-}
-
 .container p > a:hover {
   text-decoration: none;
 }
+
 .container blockquote {
   font-size: 20px;
   font-weight: bold;
   margin: 0;
   text-align: left;
 }
-/* Theory image-text grid styles*/
+
+/* Theory image-text grid styles */
 .theory {
   width: 20%;
   font-size: 14px;
@@ -160,14 +189,12 @@ figure {
 .below-theory > small {
   color: grey;
 }
-.below-theory > small a {
-  color: inherit;
-}
+
 .below-theory > small a:hover {
   text-decoration: underline;
 }
 
-/*Side bar styles*/
+/* Side bar styles */
 .main-aside {
   position: absolute;
   right: 0;
@@ -177,18 +204,44 @@ figure {
   display: flex;
   flex-direction: column;
 }
+
 .side {
   width: 300px;
   margin: 50px;
   display: block;
 }
+
 .side1 {
   margin-bottom: 300px;
 }
+
 .side2 img {
   width: 70px;
   height: 70px;
   margin-right: 10px;
+}
+
+.side1 button {
+  background-color: #6288a5;
+  padding: 10px 60px;
+  color: white;
+  font-size: 12px;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+}
+
+.side1 p {
+  font-size: 13px;
+  color: rgb(102, 102, 102);
+  margin: 8px 0;
+  width: 60%;
+}
+
+.side1 h4 {
+  margin: 0 0;
+  font-size: 18px;
+  width: 60%;
 }
 
 .main-aside figure {
@@ -202,25 +255,19 @@ figure {
   font-size: 10px;
   padding: 5px;
 }
+
 .side2 h4 {
   border-bottom: 1px solid gray;
 }
 
-.side2 a {
-  text-decoration: none;
-  color: black;
-}
-.side2 a:hover {
-  text-decoration: underline;
-}
-
-/* Footer Styles*/
+/* Footer Styles */
 footer {
   clear: both;
   width: 90%;
   margin: 0 auto;
   position: relative;
 }
+
 #more-footer {
   border-top: 1px solid black;
   width: 78%;
@@ -243,10 +290,12 @@ footer {
   width: 300px;
   height: 200px;
 }
+
 .thumbnail figcaption {
   text-align: right;
   font-size: 12px;
 }
+
 .thumbnail p:nth-last-child(1) {
   font-size: 12px;
   color: grey;
@@ -268,33 +317,17 @@ footer aside {
   border-top: 1px solid black;
 }
 
-footer h3 > a {
-  text-decoration: none;
-  color: black;
-}
-footer h3 > a:hover {
-  text-decoration: underline;
-}
 .most {
   border-top: 0.1px solid lightgray;
   padding: 20px 0 20px 0;
   list-style: none;
   width: 100%;
 }
+
 footer ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-}
-
-.most a {
-  color: black;
-  text-decoration: none;
-  font-size: 16px;
-}
-
-.most a:hover {
-  color: grey;
 }
 
 footer > nav {
@@ -304,10 +337,21 @@ footer > nav {
   margin-top: 50px;
   padding-top: 20px;
 }
+
 .ul-container {
   display: flex;
   justify-content: space-between;
   margin-top: 10px;
+}
+
+footer > nav:last-child > ul {
+  clear: both;
+  font-size: 10px;
+  color: gray;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0 30px 0;
+  border-top: 1px solid lightgray;
 }
 
 .ul-container > ul:last-child {
@@ -315,42 +359,15 @@ footer > nav {
   padding-left: 10px;
 }
 
-.ul-container a {
-  color: black;
-  text-decoration: none;
-}
-
-.ul-container a:hover {
-  text-decoration: underline;
-}
-
 .ul-container li {
   padding-bottom: 10px;
 }
 
-.ul-container ul > li:first-child {
-  font-weight: bold;
-}
-
+.ul-container ul > li:first-child,
 .ul-container > ul:last-child li:nth-child(-n + 5) {
   font-weight: bold;
 }
 
 .ul-container > ul:last-child li:nth-last-child(-n + 7) {
   font-size: 10px;
-}
-
-footer > footer > ul {
-  clear: both;
-  font-size: 10px;
-  color: lightgray;
-  display: flex;
-  justify-content: space-between;
-  padding: 10px 0 30px 0;
-  border-top: 1px solid lightgray;
-}
-
-footer > footer > ul a {
-  text-decoration: none;
-  color: lightgray;
 }
